--- a/snake_game/index.html
+++ b/snake_game/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Snake Game - Nokia 3310 Style</title>
+    <title>Snake Game - Retro Phone Style</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
                 </div>
             </div>
             
-            <div class="branding">NOKIA</div>
+            <div class="branding"></div>
 
             <div class="keypad">
                 <div class="nav-keys">
